--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!doctype html>
 <html>
 <head>
+
 <title>Example</title>
 <link rel="stylesheet" href="style.css">
 </head>
-<body style="background-color:yellowgreen;color:white;">
+<body style="background-color:yellowgreen;color:white; Magnesium$$**!#)143">
 ... goes here...content
 </body>
 </html>
